--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,23 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+}
+
 header, main, footer {
     max-width: 1200px;
     margin: 0 auto;
 }
 
+header {
+    background-color: #4EA0FF;
+    background-image: url("../img/pattern.png");
+    background-size: 400px 200px;
+    height: 100px;
+}
+
+#logo {
+    width: 200px;
+    padding: 40px 0 0 10px;
+}
