--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,29 @@ th, td {
 tbody tr:nth-child(odd) {
     background-color: #B1E5F2;
 }
+
+/* releted content */
+footer p {
+    color: gray;
+    font-weight: bold;
+    margin-top: 2em;
+}
+
+footer div {
+    width: 200px;
+    height: 160px;
+}
+
+footer div h4 {
+    color: white;
+}
+
+#first-related {
+    background-image: url("../img/monitor.jpg");
+    background-size: cover;
+}
+
+#second-related {
+    background-image: url("../img/graph.jpg");
+    background-size: cover;
+}
